trabajo-relacionado: Add monocular-stereo references
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/all.bib
+++ b/all.bib
@@ -967,3 +967,63 @@
 	month={July},
 	keywords={mono-ds,dso}
 }
+
+@Article{Lemaire2007,
+	author={Lemaire, Thomas and Berger, Cyrille and Jung, Il-Kyun and Lacroix, Simon},
+	title={{Vision-Based SLAM: Stereo and Monocular Approaches}},
+	journal={International Journal of Computer Vision},
+	year={2007},
+	volume={74},
+	number={3},
+	pages={343--364},
+	issn={1573-1405},
+	doi={10.1007/s11263-007-0042-3},
+	url={http://dx.doi.org/10.1007/s11263-007-0042-3},
+}
+
+@INPROCEEDINGS{Tomono2009,
+	author={M. Tomono},
+	booktitle={2009 IEEE International Conference on Robotics and Automation},
+	title={{Robust 3D SLAM with a stereo camera based on an edge-point ICP algorithm}},
+	year={2009},
+	pages={4306--4311},
+	doi={10.1109/ROBOT.2009.5152529},
+	ISSN={1050-4729},
+	month={May},
+}
+
+@INPROCEEDINGS{LinWang2010,
+	author={Lin, Kuen-Han and Wang, Chieh-Chih},
+	booktitle={2010 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+	title={{Stereo-based simultaneous localization, mapping and moving object tracking}},
+	year={2010},
+	pages={3975--3980},
+	doi={10.1109/IROS.2010.5649653},
+	ISSN={2153-0858},
+	month={Oct},
+}
+
+@INPROCEEDINGS{Mouragnon2006,
+	author={Mouragnon, Etienne and Lhuillier, Maxime and Dhome, Michel and Dekeyser, Fabien and Sayd, Patrick},
+	booktitle={18th International Conference on Pattern Recognition (ICPR'06)},
+	title={{Monocular Vision Based SLAM for Mobile Robots}},
+	year={2006},
+	volume={3},
+	pages={1027--1031},
+	doi={10.1109/ICPR.2006.810},
+	ISSN={1051-4651},
+	month={},
+}
+
+@ARTICLE{Hwang2011,
+	author={Hwang, Seo-Yeon and Song, Jae-Bok},
+	journal={IEEE Transactions on Industrial Electronics},
+	title={{Monocular Vision-Based SLAM in Indoor Environment Using Corner, Lamp, and Door Features From Upward-Looking Camera}},
+	year={2011},
+	volume={58},
+	number={10},
+	pages={4804--4812},
+	doi={10.1109/TIE.2011.2109333},
+	ISSN={0278-0046},
+	month={Oct},
+}
